# chatserver_prj

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
include/: chatserver.hpp  chatservice.hpp  common.hpp
include/db/: db.hpp
include/model/: friend.hpp  group.hpp  offlinemessage.hpp  user.hpp
include/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  charservice.cpp  chatserver.cpp  main.cpp
src/server/model/: friend.cpp  group.cpp  offlinemessage.cpp  user.cpp
src/server/redis/: redis.cpp
